--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
+    "bulma": "^0.9.1",
     "react": "^16.14.0",
     "react-dom": "^17.0.0",
     "react-router-dom": "^5.2.0",
